--- a/3e/Arithmétique.html
+++ b/3e/Arithmétique.html
@@ -7,4 +7,5 @@ Niveau 3ème : Arithmétique
 <li><a href="Arithmétique/Déterminer si un nombre est premier.html">Déterminer si un nombre est premier</a></li>
 <li><a href="Arithmétique/Simplifier une fraction pour la rendre irréductible.html">Simplifier une fraction pour la rendre irréductible</a></li>
 <li><a href="Arithmétique/Résoudre des problèmes relevant de la divisibilité.html">Résoudre des problèmes relevant de la divisibilité</a></li>
+<input type="button" value="Retour" onclick="history.go(-1)">
 </body>
