--- a/3e/Arithmétique/Déterminer si un nombre est premier.html
+++ b/3e/Arithmétique/Déterminer si un nombre est premier.html
@@ -63,7 +63,7 @@
     </script>
 </head>
 <body>
-<p> Consigne : Parmis la liste de nombre suivant, cocher les cases des nombres premiers
+<p> Consigne : Parmis la liste de nombre suivant, cocher la, les ou aucune cases correspondants à un nombre premier.
 </p>
 <p>
     <input id="check1" type="checkbox">
@@ -90,4 +90,7 @@
         <INPUT TYPE="button" NAME="nom" VALUE=" Recommencer " onclick="recommencer()">
     </FORM>
 </p>
+<input type="button" value="Retour" onclick="history.go(-1)">
 </body>
+
+
