--- a/3e/Calcul littéral.html
+++ b/3e/Calcul littéral.html
@@ -7,4 +7,5 @@ Niveau 3ème : Calcul littéral
 <li><a href="Calcul littéral/Développer une expression littérale.html">Développer une expression littérale</a></li>
 <li><a href="Calcul littéral/Factoriser une expression littérale.html">Factoriser une expression littérale</a></li>
 <li><a href="Calcul littéral/Réduire une expression littérale.html">Réduire une expression littérale</a></li>
+<input type="button" value="Retour" onclick="history.go(-1)">
 </body>
