--- a/3e/Equations.html
+++ b/3e/Equations.html
@@ -7,4 +7,5 @@ Niveau 3ème : Equations
 <li>Résoudre une équation (de type ax+b=c)</li>
 <li>Résoudre une équation (de type ax+b=cx+d)</li>
 <li>Résoudre une équation produit</li>
+<input type="button" value="Retour" onclick="history.go(-1)">
 </body>
