--- a/3e/Notion de fonction.html
+++ b/3e/Notion de fonction.html
@@ -6,4 +6,5 @@ Niveau 3ème : Notion de fonction
 <li>Déterminer l'image d'un nombre</li>
 <li>Déterminer l'antécédent d'un nombre</li>
 
+<input type="button" value="Retour" onclick="history.go(-1)">
 </body>
