--- a/3e/Théorème de Thalès.html
+++ b/3e/Théorème de Thalès.html
@@ -5,4 +5,5 @@ Niveau 3ème : Théorème de Thalès
 <ul>Sélectionner la compétences à travailler</ul>
 <li>Utiliser le théorème de Thalès</li>
 <li>Utiliser la réciproque du théorème de Thalès</li>
+<input type="button" value="Retour" onclick="history.go(-1)">
 </body>
