--- a/3e/Transformations du plan.html
+++ b/3e/Transformations du plan.html
@@ -8,4 +8,5 @@ Niveau 3ème : Tranformation du plan
 <li>Comprendre les translations</li>
 <li>Comprendre les rotations</li>
 <li>Comprendre les homothéties</li>
+<input type="button" value="Retour" onclick="history.go(-1)">
 </body>
