--- a/4e/Proportionnalité.html
+++ b/4e/Proportionnalité.html
@@ -5,5 +5,5 @@ Niveau 4ème : Proportionnalité
 <ul>Sélectionner la compétences à travailler</ul>
 <li>Calculer une quatrième proportionnelle</li>
 <li>Identifier une situation de proportionnalité</li>
-
+<input type="button" value="Retour" onclick="history.go(-1)">
 </body>
