--- a/4e/Pyramide et cône.html
+++ b/4e/Pyramide et cône.html
@@ -6,5 +6,5 @@ Niveau 4ème : Pyramide et cône
 <li>Reconnaître des solides</li>
 <li>Représenter différents solides</li>
 <li>Calculer des volumes</li>
-
+<input type="button" value="Retour" onclick="history.go(-1)">
 </body>
