--- a/4e/Théorème de Pythagore.html
+++ b/4e/Théorème de Pythagore.html
@@ -5,5 +5,5 @@ Niveau 4ème : Théorème de Pythagore
 <ul>Sélectionner la compétences à travailler</ul>
 <li>Utiliser le théorème de Pythagore</li>
 <li>Utiliser la réciproque du théorème de Pythagore</li>
-
+<input type="button" value="Retour" onclick="history.go(-1)">
 </body>
