--- a/4e/Transformations du plan.html
+++ b/4e/Transformations du plan.html
@@ -6,5 +6,5 @@ Niveau 4ème : Transformations du plan
 <li>Comprendre les symétries</li>
 <li>Comprendre les translations</li>
 <li>Comprendre les rotations</li>
-
+<input type="button" value="Retour" onclick="history.go(-1)">
 </body>
