--- a/3e/Arithmétique/Décomposer un nombre en produits de facteurs premiers.html
+++ b/3e/Arithmétique/Décomposer un nombre en produits de facteurs premiers.html
@@ -45,5 +45,6 @@
     <p id="Resultat"></p>
     <p id="TextReponse"></p>
     <input type="button" value="Recommencer ?" onclick="recommencer()"><br><br>
+<input type="button" value="Retour" onclick="history.go(-1)">
 
 </body>
