--- a/3e/Arithmétique/Résoudre des problèmes relevant de la divisibilité.html
+++ b/3e/Arithmétique/Résoudre des problèmes relevant de la divisibilité.html
@@ -93,4 +93,5 @@
         <INPUT TYPE="button" VALUE=" Annuler " onclick="Annuler()">
         <INPUT TYPE="button" VALUE=" Recommencer " onclick="Recommencer()">
     </FORM>
+	<input type="button" value="Retour" onclick="history.go(-1)">
 </body>
