--- a/4e/Calcul littéral/Développer une expression littérale.html
+++ b/4e/Calcul littéral/Développer une expression littérale.html
@@ -44,5 +44,5 @@
     <p id="Resultat"></p>
     <p id="TextReponse"></p>
     <input type="submit" value="Recommencer ?" onclick="recommencer()"><br><br>
-
+<input type="button" value="Retour" onclick="history.go(-1)">
 </body>
