--- a/4e/Calcul littéral/Réduire une expression littérale.html
+++ b/4e/Calcul littéral/Réduire une expression littérale.html
@@ -43,5 +43,5 @@
     <p id="TextReponse"></p>
     <input type="button" value="Valider" onclick="testReponse()">
     <input type="button" value="Recommencer ?" onclick="recommencer()"><br><br>
-
+<input type="button" value="Retour" onclick="history.go(-1)">
 </body>
