--- a/4e/Fractions.html
+++ b/4e/Fractions.html
@@ -3,8 +3,8 @@ Niveau 4ème : Fractions
 </head></p></b></u>
 <body>
 <ul>Sélectionner la compétences à travailler</ul>
-<li><a href="Simplifier une  fraction">Simplifier une  fraction</a></li>
-<li><a href="Additionner et soustraire des fractions">Additionner et soustraire des fractions</a></li>
-<li><a href="Multiplier et diviser des fractions">Multiplier et diviser des fractions</a></li>
-
+<li><a href="Fractions/Simplifier une  fraction.html">Simplifier une  fraction</a></li>
+<li><a href="Fractions/Additionner et soustraire des fractions.html">Additionner et soustraire des fractions</a></li>
+<li><a href="Fractions/Multiplier et diviser des fractions.html">Multiplier et diviser des fractions</a></li>
+<input type="button" value="Retour" onclick="history.go(-1)">
 </body>
