--- a/4e/Fractions/Multiplier et diviser des fractions.html
+++ b/4e/Fractions/Multiplier et diviser des fractions.html
@@ -124,4 +124,5 @@
         <INPUT TYPE="button" VALUE=" Annuler " onclick="Annuler()">
         <INPUT TYPE="button" VALUE=" Recommencer " onclick="Recommencer()">
     </FORM>
+	<input type="button" value="Retour" onclick="history.go(-1)">
 </body>
