--- a/4e/Nombres relatifs.html
+++ b/4e/Nombres relatifs.html
@@ -3,7 +3,7 @@ Niveau 4ème : Nombres relatifs
 </head></p></b></u>
 <body>
 <ul>Sélectionner la compétences à travailler</ul>
-<li><a href="Additionner et soustraire des nombres relatifs">Additionner et soustraire des nombres relatifs</a></li>
-<li><a href="Multiplier et diviser des nombres relatifs">Multiplier et diviser des nombres relatifs</a></li>
-
+<li><a href="Nombres relatifs/Additionner et soustraire des nombres relatifs.html">Additionner et soustraire des nombres relatifs</a></li>
+<li><a href="Nombres relatifs/Multiplier et diviser des nombres relatifs.html">Multiplier et diviser des nombres relatifs</a></li>
+<input type="button" value="Retour" onclick="history.go(-1)">
 </body>
