--- a/3e/Calcul littéral.html
+++ b/3e/Calcul littéral.html
@@ -1,11 +1,21 @@
-﻿<head><p><b><u>
-Niveau 3ème : Calcul littéral
-</head></p></b></u>
-<body>
-<ul>Sélectionner la compétences à travailler</ul>
-<li><a href="Calcul littéral/Calculer la valeur d'une expression littérale.html">Calculer la valeur d'une expression littérale</a></li>
-<li><a href="Calcul littéral/Développer une expression littérale.html">Développer une expression littérale</a></li>
-<li><a href="Calcul littéral/Factoriser une expression littérale.html">Factoriser une expression littérale</a></li>
-<li><a href="Calcul littéral/Réduire une expression littérale.html">Réduire une expression littérale</a></li>
-<input type="button" value="Retour" onclick="history.go(-1)">
-</body>
+﻿<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="base.css">
+    </head>
+    <body>
+    <div style="height: 50px;"></div>
+    <p class="soustitre">
+        Niveau 3ème :
+    </p>
+    <h1><b><u>
+        Calcul littéral
+    </h1></b></u>
+    <ul>Sélectionner la compétences à travailler</ul>
+    <li><a class="button" href="Calcul littéral/Calculer la valeur d'une expression littérale.html">Calculer la valeur d'une expression littérale</a></li>
+    <li><a class="button" href="Calcul littéral/Développer une expression littérale.html">Développer une expression littérale</a></li>
+    <li><a class="button" href="Calcul littéral/Factoriser une expression littérale.html">Factoriser une expression littérale</a></li>
+    <li><a class="button" href="Calcul littéral/Réduire une expression littérale.html">Réduire une expression littérale</a></li>
+    <div style="height: 50px;"></div>
+    <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
+    </body>
+</html>
