--- a/3e/Statistiques.html
+++ b/3e/Statistiques.html
@@ -1,12 +1,22 @@
-﻿<head><p><b><u>
-Niveau 3ème : Statistiques
-</head></p></b></u>
-<body>
-<ul>Sélectionner la compétences à travailler</ul>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<input type="button" value="Retour" onclick="history.go(-1)">
-</body>
+﻿<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="base.css">
+    </head>
+    <body>
+    <div style="height: 50px;"></div>
+    <p class="soustitre">
+        Niveau 3ème :
+    </p>
+    <h1><b><u>
+        Statistiques
+    </h1></b></u>
+    <ul>Sélectionner la compétences à travailler</ul>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <div style="height: 50px;"></div>
+    <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
+    </body>
+</html>
