--- a/4e/Fractions.html
+++ b/4e/Fractions.html
@@ -1,10 +1,20 @@
-﻿<head><p><b><u>
-Niveau 4ème : Fractions
-</head></p></b></u>
-<body>
-<ul>Sélectionner la compétences à travailler</ul>
-<li><a href="Fractions/Simplifier une  fraction.html">Simplifier une  fraction</a></li>
-<li><a href="Fractions/Additionner et soustraire des fractions.html">Additionner et soustraire des fractions</a></li>
-<li><a href="Fractions/Multiplier et diviser des fractions.html">Multiplier et diviser des fractions</a></li>
-<input type="button" value="Retour" onclick="history.go(-1)">
-</body>
+﻿<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="base.css">
+    </head>
+    <body>
+    <div style="height: 50px;"></div>
+    <p class="soustitre">
+        Niveau 4ème :
+    </p>
+    <h1><b><u>
+        Fractions
+    </h1></b></u>
+    <ul>Sélectionner la compétences à travailler</ul>
+    <li><a class="button" href="Fractions/Simplifier une  fraction.html">Simplifier une  fraction</a></li>
+    <li><a class="button" href="Fractions/Additionner et soustraire des fractions.html">Additionner et soustraire des fractions</a></li>
+    <li><a class="button" href="Fractions/Multiplier et diviser des fractions.html">Multiplier et diviser des fractions</a></li>
+    <div style="height: 50px;"></div>
+    <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
+    </body>
+</html>
