--- a/index.html
+++ b/index.html
@@ -1,25 +1,80 @@
-﻿<head>
-<p><b><u>
-Exercices de mathématiques de Guylann Criscuolo
-</p></b></u>
-</head>
-<body>
-Sélectionner le chapitre que vous voulez travailler.
-<ul><b>3ème</b></ul>
-<li><a href="3e\Arithmétique.html">Arithmétique</a></li>
-<li><a href="3e\Transformations du plan.html">Tranformations du plan</a></li>
-<li><a href="3e\Notion de fonction.html">Notion de fonctions</a></li>
-<li><a href="3e\Statistiques.html">Statistiques</a></li>
-<li><a href="3e\Calcul littéral.html">Calcul littéral</a></li>
-<li><a href="3e\Théorème de Thalès.html">Théorème de Thalès</a></li>
-<li><a href="3e\Equations.html">Equations</a></li>
-<ul><b>4ème</b></ul>
-<li><a href="4e\Nombres relatifs.html">Nombres relatifs</a></li>
-<li><a href="4e\Théorème de Pythagore.html">Théorème de Pythagore</a></li>
-<li><a href="4e\Fractions.html">Fractions</a></li>
-<li><a href="4e\Pyramide et cône.html">Pyramide et cônes</a></li>
-<li><a href="4e\Proportionnalité.html">Proportionnalité</a></li>
-<li><a href="4e\Transformations du plan.html">Tranformations du plan</a></li>
-<li><a href="4e\Calcul littéral.html">Calcul littéral</a></li>
+﻿<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="index.css">
+        <img src="BackgroundHead.png"
+          alt="" title="Site Exerciseur" id="Titre">
+    </head>
+    <body>
+        <h1><b><u>
+            Exerciseur en ligne
+        </h1></b></u>
+        <p class="soustitre">
+            par Guylann Criscuolo et Vincent Sinel.
+        </p>
 
-</body>
+        <table class="colonnetable">
+            <tr>
+                <td>
+                    <div class="classeSelect">
+                        <p class="selectedclasse"></pclass>
+                            3ème
+                        </p>
+                        <a class="button" href="3e\Arithmétique.html">
+                            Arithmétique
+                        </a><br>
+                        <a class="button" href="3e\Transformations du plan.html">
+                            Tranformations du plan
+                        </a><br>
+                        <a class="button" href="3e\Notion de fonction.html">
+                            Notion de fonctions
+                        </a><br>
+                        <a class="button" href="3e\Statistiques.html">
+                            Statistiques
+                        </a><br>
+                        <a class="button" href="3e\Calcul littéral.html">
+                            Calcul littéral
+                        </a><br>
+                        <a class="button" href="3e\Théorème de Thalès.html">
+                            Théorème de Thalès
+                        </a><br>
+                        <a class="button" href="3e\Equations.html">
+                            Equations
+                        </a><br>
+                        <div style="height: 5px;"></div>
+                    </div>
+                </td>
+                <td style="width: 20px;">
+                </td>
+                <td>
+                    <div class="classeSelect">
+                        <p class="selectedclasse"></pclass>
+                            4ème
+                        </p>
+                        <a class="button" href="4e\Nombres relatifs.html">
+                            Nombres relatifs
+                        </a><br>
+                        <a class="button" href="4e\Théorème de Pythagore.html">
+                            Théorème de Pythagore
+                        </a><br>
+                        <a class="button" href="4e\Fractions.html">
+                            Fractions
+                        </a><br>
+                        <a class="button" href="4e\Pyramide et cône.html">
+                            Pyramide et cônes
+                        </a><br>
+                        <a class="button" href="4e\Proportionnalité.html">
+                            Proportionnalité
+                        </a><br>
+                        <a class="button" href="4e\Transformations du plan.html">
+                            Transformations du plan
+                        </a><br>
+                        <a class="button" href="4e\Calcul littéral.html">
+                            Calcul littéral
+                        </a><br>
+                        <div style="height: 5px;"></div>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </body>
+</html>
