--- a/3e/Arithmétique/Résoudre des problèmes relevant de la divisibilité.html
+++ b/3e/Arithmétique/Résoudre des problèmes relevant de la divisibilité.html
@@ -1,11 +1,5 @@
 ﻿<head>
-    <p>
-        <b>
-            <u>
-                Résoudre des problèmes relevant de la divisibilité
-            </u>
-        </b>
-    </p>
+    <link rel="stylesheet" type="text/css" href="base.css">
     <script src="script.js"></script>
     <script>
         var values = GenererExerciceProblème(1800, 3000);
@@ -55,6 +49,10 @@
     </script>
 </head>
 <body>
+    <div style="height: 50px;"></div>
+    <h1><b><u>
+        Résoudre des problèmes relevant de la divisibilité.
+    </h1></b></u>
     <p>
         <label>
             Consigne : Un fleuriste décide de faire des bouquets de roses et de marguerites. Il
@@ -72,26 +70,29 @@
         <label>
             marguerites. Il veut faire des bouquets identiques
             en utilisant toutes les fleurs à sa disposition.<br />
-            a) Combien de bouquets pourra-t-il faire au maximum ?
-            en utilisant toutes les fleurs à sa disposition.<br />
-            b) Quelle sera la composition de chaque bouquet ?
         </label>
     </p>
-    <label> Au maximum il pourra faire </label>
-    <input type="number" id="bouquets">
-    <label> bouquets. </label>
-    <label id="correctionpgcd" style="color:red"></label><br>
-    <label> Chaque bouquet sera composé de </label>
-    <input type="number" id="roses">
-    <label> rose(s) et de  </label>
-    <input type="number" id="marguerites">
-    <label> marguerite(s).  </label>
-    <label id="correctiondivision" style="color:red"></label><br>
-    <label id="correctionGlobal"></label><br>
-    <FORM>
-        <INPUT TYPE="button" VALUE=" Valider " onclick="Valider()">
-        <INPUT TYPE="button" VALUE=" Annuler " onclick="Annuler()">
-        <INPUT TYPE="button" VALUE=" Recommencer " onclick="Recommencer()">
-    </FORM>
-	<input type="button" value="Retour" onclick="history.go(-1)">
+    <p style="text-align: left;">
+        a) Combien de bouquets pourra-t-il faire au maximum ?
+        en utilisant toutes les fleurs à sa disposition.<br />
+        b) Quelle sera la composition de chaque bouquet ?
+    </p>
+    <p>
+        <label> Au maximum il pourra faire </label>
+        <input class="backbutton" type="number" id="bouquets">
+        <label> bouquets. </label><br>
+        <label id="correctionpgcd" style="color:#FF5555"></label><br>
+        <label> Chaque bouquet sera composé de </label>
+        <input class="backbutton" type="number" id="roses">
+        <label> rose(s) et de  </label>
+        <input class="backbutton" type="number" id="marguerites">
+        <label> marguerite(s).  </label><br>
+        <label id="correctiondivision" style="color:#FF5555"></label><br>
+        <label id="correctionGlobal"></label>
+        <INPUT class="backbutton" TYPE="button" VALUE=" Valider " onclick="Valider()">
+        <INPUT class="backbutton" TYPE="button" VALUE=" Annuler " onclick="Annuler()">
+    </p>
+    <div style="height: 50px;"></div>
+    <INPUT class="backbutton" TYPE="button" VALUE=" Recommencer " onclick="Recommencer()">
+	<input class="backbutton" type="button" value="Retour" onclick="history.go(-1)">
 </body>
