--- a/3e/Arithmétique/Simplifier une fraction pour la rendre irréductible.html
+++ b/3e/Arithmétique/Simplifier une fraction pour la rendre irréductible.html
@@ -1,11 +1,5 @@
 ﻿<head>
-    <p>
-        <b>
-            <u>
-                Simplifier une fraction pour la rendre irréductible
-            </u>
-        </b>
-    </p>
+    <link rel="stylesheet" type="text/css" href="base.css">
     <script src="script.js"></script>
     <script>
         var values = GenererExerciceProblème(50, 500);
@@ -48,6 +42,10 @@
 </head>
 
 <body>
+    <div style="height: 50px;"></div>
+    <h1><b><u>
+        Simplifier une fraction pour la rendre irréductible
+    </h1></b></u>
     <p>
         <label>
             Consigne : Simplifier la fraction suivante pour la rendre irréductible.
@@ -58,41 +56,42 @@
         <tbody>
             <tr>
                 <td style="text-align: center;">
-                    <label id="numerateur">
+                    <p id="numerateur">
                         <script>document.write(values[0])</script>
-                    </label>
+                    </p>
                 </td>
-                <td rowspan="2">=</td>
+                <td rowspan="2" style="width: 20;"><p>  =  </p></td>
                 <td>
-                    <input type="number" id="Rep_numerateurs"><br>
+                    <input class="backbutton" type="number" id="Rep_numerateurs"><br>
                 </td>
                 <td rowspan="2" width="30"></td>
                 <td style="text-align: center;">
-                    <label id="Cor_numerateur" style="color:red">
-                    </label>
+                    <p id="Cor_numerateur" style="color:#FF5555">
+                    </p>
                 </td>
             </tr>
             <tr>
-                <td style="border-style: solid none none none; text-align: center;">
-                    <label id="denominateur">
+                <td style="border-color: white; border-style: solid none none none; text-align: center;">
+                    <p id="denominateur">
                         <script>document.write(values[1])</script>
-                    </label>
+                    </p>
                 </td>
-                <td style="border-style: solid none none none">
-                    <input type="number" id="Rep_denominateurs"><br>
+                <td style="border-color: white; border-style: solid none none none">
+                    <input class="backbutton" type="number" id="Rep_denominateurs"><br>
                 </td>
-                <td style="border-style: solid none none none; text-align: center;">
-                    <label id="Cor_denominateur" style="color:red">
-                    </label>
+                <td style="border-color: white; border-style: solid none none none; text-align: center;">
+                    <p id="Cor_denominateur" style="color:#FF5555">
+                    </p>
                 </td>
             </tr>
         </tbody>
     </table>
-    <label id="correctionGlobal"></label><br>
-    <FORM>
-        <INPUT TYPE="button" VALUE=" Valider " onclick="Valider()">
-        <INPUT TYPE="button" VALUE=" Annuler " onclick="Annuler()">
-        <INPUT TYPE="button" VALUE=" Recommencer " onclick="Recommencer()">
-    </FORM>
-	<input type="button" value="Retour" onclick="history.go(-1)">
+    <p>
+        <label id="correctionGlobal"></label><br>
+        <INPUT class="backbutton" TYPE="button" VALUE=" Valider " onclick="Valider()">
+        <INPUT class="backbutton" TYPE="button" VALUE=" Annuler " onclick="Annuler()">
+    </p>
+    <div style="height: 50px;"></div>
+    <INPUT class="backbutton" TYPE="button" VALUE=" Recommencer " onclick="Recommencer()">
+	<input class="backbutton" type="button" value="Retour" onclick="history.go(-1)">
 </body>
