--- a/3e/Notion de fonction.html
+++ b/3e/Notion de fonction.html
@@ -1,10 +1,19 @@
-﻿<head><p><b><u>
-Niveau 3ème : Notion de fonction
-</head></p></b></u>
-<body>
-<ul>Sélectionner la compétences à travailler</ul>
-<li>Déterminer l'image d'un nombre</li>
-<li>Déterminer l'antécédent d'un nombre</li>
-
-<input type="button" value="Retour" onclick="history.go(-1)">
-</body>
+﻿<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="base.css">
+    </head>
+    <body>
+    <div style="height: 50px;"></div>
+    <p class="soustitre">
+        Niveau 3ème :
+    </p>
+    <h1><b><u>
+        Notion de fonction
+    </h1></b></u>
+    <ul>Sélectionner la compétences à travailler</ul>
+    <li>Déterminer l'image d'un nombre</li>
+    <li>Déterminer l'antécédent d'un nombre</li>
+    <div style="height: 50px;"></div>
+    <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
+    </body>
+</html>
