--- a/3e/Théorème de Thalès.html
+++ b/3e/Théorème de Thalès.html
@@ -1,9 +1,19 @@
-﻿<head><p><b><u>
-Niveau 3ème : Théorème de Thalès
-</head></p></b></u>
-<body>
-<ul>Sélectionner la compétences à travailler</ul>
-<li>Utiliser le théorème de Thalès</li>
-<li>Utiliser la réciproque du théorème de Thalès</li>
-<input type="button" value="Retour" onclick="history.go(-1)">
-</body>
+﻿<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="base.css">
+    </head>
+    <body>
+    <div style="height: 50px;"></div>
+    <p class="soustitre">
+        Niveau 3ème :
+    </p>
+    <h1><b><u>
+        Théorème de Thalès
+    </h1></b></u>
+    <ul>Sélectionner la compétences à travailler</ul>
+    <li>Utiliser le théorème de Thalès</li>
+    <li>Utiliser la réciproque du théorème de Thalès</li>
+    <div style="height: 50px;"></div>
+    <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
+    </body>
+</html>
