--- a/4e/Fractions/Multiplier et diviser des fractions.html
+++ b/4e/Fractions/Multiplier et diviser des fractions.html
@@ -1,23 +1,18 @@
 ﻿<head>
-    <p>
-        <b>
-            <u>
-                Multiplier et diviser des fractions
-            </u>
-        </b>
-    </p>
+    <link rel="stylesheet" type="text/css" href="base.css">
     <script src="script.js"></script>
     <script>
         var values = CreateMult();
 
 
         function Valider() {
-            console.log(values);
             var nbr1 = document.getElementById("Rep_numerateurs").value;
             var nbr2 = document.getElementById("Rep_denominateurs").value;
             document.getElementById("Cor_numerateur").innerHTML = "";
             document.getElementById("Cor_denominateur").innerHTML = "";
-            if ((nbr1 == values[4] || nbr1 == values[7]) && (nbr2 == values[5] || nbr2 == values[8]))
+            var croix1 = nbr1*values[5];
+            var croix2 = nbr2*values[4];
+            if (croix1 === croix2 && nbr2 != 0)
                 document.getElementById("correctionGlobal").innerHTML = "Bravo c'est correct";
             else {
                 document.getElementById("Cor_numerateur").innerHTML = (values[4]).toString();
@@ -54,6 +49,10 @@
 </head>
 
 <body>
+    <div style="height: 50px;"></div>
+    <h1><b><u>
+        Multiplier et diviser des fractions.
+    </h1></b></u>
     <p>
         <label>
             Consigne : Réaliser l'opération suivante. La calculatrice est FORTEMENT déconseillée.
@@ -68,7 +67,7 @@
                         <script>document.write(values[0])</script>
                     </label>
                 </td>
-				<td style="text-align : center;" rowspan="2">
+				<td style="text-align : center; width: 20; color: white;" rowspan="2">
 					<label id="operation">
 						<script>document.write(values[6])</script>
 					</label>
@@ -78,51 +77,53 @@
                         <script>document.write(values[2])</script>
                     </label>
                 </td>
-                <td rowspan="2">=</td>
+                <td rowspan="2" style="width: 20; color: white;">=</td>
                 <td>
-                    <input type="number" id="Rep_numerateurs"><br>
+                    <input class="backbutton" type="number" id="Rep_numerateurs"><br>
                 </td>
                 <td rowspan="2" width="30"></td>
                 <td style="text-align: center;">
-                    <label id="Cor_numerateur" style="color:red">
+                    <label id="Cor_numerateur" style="color:#FF5555">
                     </label>
                 </td>
-                <td rowspan="2">=</td>
+                <td rowspan="2" style="width: 20; color: white;">=</td>
 				<td style="text-align: center;">
-                    <label id="Cor_numerateurSimp" style="color:red">
+                    <label id="Cor_numerateurSimp" style="color:#FF5555">
                     </label>
                 </td>
             </tr>
             <tr>
-                <td style="border-style: solid none none none; text-align: center;">
+                <td style="border-color: white; border-style: solid none none none; text-align: center;">
                     <label id="denominateur">
                         <script>document.write(values[1])</script>
                     </label>
                 </td>
-				<td style="border-style: solid none none none; text-align: center;">
+				<td style="border-color: white; border-style: solid none none none; text-align: center;">
                     <label id="denominateur2">
                         <script>document.write(values[3])</script>
                     </label>
                 </td>
-                <td style="border-style: solid none none none; text-align: center;">
-                    <input type="number" id="Rep_denominateurs"><br>
+                <td style="border-color: white; border-style: solid none none none; text-align: center;">
+                    <input class="backbutton" type="number" id="Rep_denominateurs"><br>
                 </td>
-                <td style="border-style: solid none none none; text-align: center;">
-                    <label id="Cor_denominateur" style="color:red">
+                <td style="border-color: white; border-style: solid none none none; text-align: center;">
+                    <label id="Cor_denominateur" style="color:#FF5555">
                     </label>
                 </td>
-                <td style="border-style: solid none none none; text-align: center;">
-                    <label id="Cor_denominateurSimp" style="color:red">
+                <td style="border-color: white; border-style: solid none none none; text-align: center;">
+                    <label id="Cor_denominateurSimp" style="color:#FF5555">
                     </label>
                 </td>
             </tr>
         </tbody>
     </table>
-    <label id="correctionGlobal"></label><br>
-    <FORM>
-        <INPUT TYPE="button" VALUE=" Valider " onclick="Valider()">
-        <INPUT TYPE="button" VALUE=" Annuler " onclick="Annuler()">
-        <INPUT TYPE="button" VALUE=" Recommencer " onclick="Recommencer()">
-    </FORM>
-	<input type="button" value="Retour" onclick="history.go(-1)">
+    <p>
+        <INPUT class="backbutton" TYPE="button" VALUE=" Valider " onclick="Valider()">
+        <INPUT class="backbutton" TYPE="button" VALUE=" Annuler " onclick="Annuler()"><br>
+        <label id="correctionGlobal"></label><br>
+    </p>
+    <p>
+        <INPUT class="backbutton" TYPE="button" VALUE=" Recommencer " onclick="Recommencer()">
+        <input class="backbutton" type="button" value="Retour" onclick="history.go(-1)">
+    </p>
 </body>
