--- a/4e/Fractions/Simplifier une  fraction.html
+++ b/4e/Fractions/Simplifier une  fraction.html
@@ -1,18 +1,11 @@
 ﻿<head>
-    <p>
-        <b>
-            <u>
-                Simplifier une  fraction
-            </u>
-        </b>
-    </p>
+    <link rel="stylesheet" type="text/css" href="base.css">
     <script src="script.js"></script>
     <script>
         var values = GenererExerciceProblème(10, 100);
 
 
         function Valider() {
-            console.log(values);
             var nbr1 = document.getElementById("Rep_numerateurs").value;
             var nbr2 = document.getElementById("Rep_denominateurs").value;
             document.getElementById("Cor_numerateur").innerHTML = "";
@@ -48,6 +41,10 @@
 </head>
 
 <body>
+    <div style="height: 50px;"></div>
+    <h1><b><u>
+        Simplifier une  fraction.
+    </h1></b></u>
     <p>
         <label>
             Consigne : Simplifier la fraction suivante pour la rendre irréductible.
@@ -62,37 +59,39 @@
                         <script>document.write(values[0])</script>
                     </label>
                 </td>
-                <td rowspan="2">=</td>
+                <td rowspan="2" style="width: 20; color: white;">=</td>
                 <td>
-                    <input type="number" id="Rep_numerateurs"><br>
+                    <input class="backbutton" type="number" id="Rep_numerateurs"><br>
                 </td>
                 <td rowspan="2" width="30"></td>
                 <td style="text-align: center;">
-                    <label id="Cor_numerateur" style="color:red">
+                    <label id="Cor_numerateur" style="color:#FF5555">
                     </label>
                 </td>
             </tr>
             <tr>
-                <td style="border-style: solid none none none; text-align: center;">
+                <td style="border-color: white; border-style: solid none none none; text-align: center;">
                     <label id="denominateur">
                         <script>document.write(values[1])</script>
                     </label>
                 </td>
-                <td style="border-style: solid none none none">
-                    <input type="number" id="Rep_denominateurs"><br>
+                <td style="border-color: white; border-style: solid none none none">
+                    <input class="backbutton" type="number" id="Rep_denominateurs"><br>
                 </td>
-                <td style="border-style: solid none none none; text-align: center;">
-                    <label id="Cor_denominateur" style="color:red">
+                <td style="border-color: white; border-style: solid none none none; text-align: center;">
+                    <label id="Cor_denominateur" style="color:#FF5555">
                     </label>
                 </td>
             </tr>
         </tbody>
     </table>
-    <label id="correctionGlobal"></label><br>
-    <FORM>
-        <INPUT TYPE="button" VALUE=" Valider " onclick="Valider()">
-        <INPUT TYPE="button" VALUE=" Annuler " onclick="Annuler()">
-        <INPUT TYPE="button" VALUE=" Recommencer " onclick="Recommencer()">
-    </FORM>
-	<input type="button" value="Retour" onclick="history.go(-1)">
+    <p>
+        <INPUT class="backbutton" TYPE="button" VALUE=" Valider " onclick="Valider()">
+        <INPUT class="backbutton" TYPE="button" VALUE=" Annuler " onclick="Annuler()"><br>
+            <label id="correctionGlobal"></label><br>
+    </p>
+    <P>
+        <INPUT class="backbutton" TYPE="button" VALUE=" Recommencer " onclick="Recommencer()">
+        <input class="backbutton" type="button" value="Retour" onclick="history.go(-1)">
+    </P>
 </body>
