--- a/4e/Nombres relatifs.html
+++ b/4e/Nombres relatifs.html
@@ -1,9 +1,19 @@
-﻿<head><p><b><u>
-Niveau 4ème : Nombres relatifs
-</head></p></b></u>
-<body>
-<ul>Sélectionner la compétences à travailler</ul>
-<li><a href="Nombres relatifs/Additionner et soustraire des nombres relatifs.html">Additionner et soustraire des nombres relatifs</a></li>
-<li><a href="Nombres relatifs/Multiplier et diviser des nombres relatifs.html">Multiplier et diviser des nombres relatifs</a></li>
-<input type="button" value="Retour" onclick="history.go(-1)">
-</body>
+﻿<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="base.css">
+    </head>
+    <body>
+    <div style="height: 50px;"></div>
+    <p class="soustitre">
+        Niveau 4ème :
+    </p>
+    <h1><b><u>
+        Nombres relatifs
+    </h1></b></u>
+    <ul>Sélectionner la compétences à travailler</ul>
+    <li><a class="button" href="Nombres relatifs/Additionner et soustraire des nombres relatifs.html">Additionner et soustraire des nombres relatifs</a></li>
+    <li><a class="button" href="Nombres relatifs/Multiplier et diviser des nombres relatifs.html">Multiplier et diviser des nombres relatifs</a></li>
+    <div style="height: 50px;"></div>
+    <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
+    </body>
+</html>
