--- a/4e/Proportionnalité.html
+++ b/4e/Proportionnalité.html
@@ -1,9 +1,19 @@
-﻿<head><p><b><u>
-Niveau 4ème : Proportionnalité
-</head></p></b></u>
-<body>
-<ul>Sélectionner la compétences à travailler</ul>
-<li>Calculer une quatrième proportionnelle</li>
-<li>Identifier une situation de proportionnalité</li>
-<input type="button" value="Retour" onclick="history.go(-1)">
-</body>
+﻿<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="base.css">
+    </head>
+    <body>
+    <div style="height: 50px;"></div>
+    <p class="soustitre">
+        Niveau 4ème :
+    </p>
+    <h1><b><u>
+        Proportionnalité
+    </h1></b></u>
+    <ul>Sélectionner la compétences à travailler</ul>
+    <li>Calculer une quatrième proportionnelle</li>
+    <li>Identifier une situation de proportionnalité</li>
+    <div style="height: 50px;"></div>
+    <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
+    </body>
+</html>
