--- a/4e/Transformations du plan.html
+++ b/4e/Transformations du plan.html
@@ -1,10 +1,20 @@
-﻿<head><p><b><u>
-Niveau 4ème : Transformations du plan
-</head></p></b></u>
-<body>
-<ul>Sélectionner la compétences à travailler</ul>
-<li>Comprendre les symétries</li>
-<li>Comprendre les translations</li>
-<li>Comprendre les rotations</li>
-<input type="button" value="Retour" onclick="history.go(-1)">
-</body>
+﻿<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="base.css">
+    </head>
+    <body>
+    <div style="height: 50px;"></div>
+    <p class="soustitre">
+        Niveau 4ème :
+    </p>
+    <h1><b><u>
+        Transformations du plan
+    </h1></b></u>
+    <ul>Sélectionner la compétences à travailler</ul>
+    <li>Comprendre les symétries</li>
+    <li>Comprendre les translations</li>
+    <li>Comprendre les rotations</li>
+    <div style="height: 50px;"></div>
+    <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
+    </body>
+</html>
