--- a/3e/Calcul littéral/Développer une expression littérale.html
+++ b/3e/Calcul littéral/Développer une expression littérale.html
@@ -1,11 +1,5 @@
 ﻿<head>
-    <p>
-        <b>
-            <u>
-                Développer une expression littérale
-            </u>
-        </b>
-    </p>
+    <link rel="stylesheet" type="text/css" href="base.css">
     <script src="script.js"></script>
     <script>
         var nombre = CreateExprDev();
@@ -21,28 +15,38 @@
 
         function testReponse() {
             var txt = document.getElementById("fname").value;
+            document.getElementById("TextReponse").innerHTML = "";
             console.log(txt);
             if (nombre[1] == txt) {
                 document.getElementById("Resultat").innerHTML = "Bravo c'est la bonne réponse";
             }
             else {
-                document.getElementById("Resultat").innerHTML = "C'est loupé pour cette fois";
+                document.getElementById("Resultat").innerHTML = "C'est loupé pour cette fois, la bonne réponse était : ";
+                document.getElementById("TextReponse").innerHTML = nombre[1];
             }
-            document.getElementById("TextReponse").innerHTML = nombre[1];
         }
     </script>
 </head>
 <body>
+    <div style="height: 50px;"></div>
+    <h1><b><u>
+        Développer une expression littérale.
+    </h1></b></u>
     <p>
         Consigne : Développer l'expression littérale suivante. Pour répondre compléter les cases correspondantes.
     </p>
     <p id="TextQuestion">
         <script>document.write(nombre[0])</script>
     </p>
-    <input type="text" id="fname"><br><br>
-    <input type="submit" value="Valider" onclick="testReponse()"><br><br>
-    <p id="Resultat"></p>
-    <p id="TextReponse"></p>
-    <input type="submit" value="Recommencer ?" onclick="recommencer()"><br><br>
-<input type="button" value="Retour" onclick="history.go(-1)">
+    <p>
+        <input class="backbutton" type="text" id="fname">
+        <input class="backbutton" type="submit" value="Valider" onclick="testReponse()"><br>
+        <label id="Resultat"></label>
+        <label id="TextReponse"></label><br>
+    </p>
+    <p>
+        <input class="backbutton" type="submit" value="Recommencer ?" onclick="recommencer()">
+        <input class="backbutton" type="button" value="Retour" onclick="history.go(-1)">
+    </p>
+    
 </body>
