--- a/3e/Théorème de Thalès.html
+++ b/3e/Théorème de Thalès.html
@@ -11,9 +11,9 @@
         Théorème de Thalès
     </h1></b></u>
     <ul>Sélectionner la compétences à travailler</ul>
-    <li>Utiliser le théorème de Thalès</li>
+    <li><a class="button" href="Théorème de Thalès/Utiliser le théorème de Thalès.html">Utiliser le théorème de Thalès</a></li>
     <li>Utiliser la réciproque du théorème de Thalès</li>
-    <div style="height: 50px;"></div>
+    <<div style="height: 50px;"></div>
     <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
     </body>
 </html>
