--- a/3e/Equations.html
+++ b/3e/Equations.html
@@ -12,9 +12,9 @@
     </h1></b></u>
     <ul>Sélectionner la compétences à travailler</ul>
     <li><a class="button"  href="Equations/Résoudre une équation simple (de type ax=b).html">Résoudre une équation simple (de type ax=b)</a></li>
-    <li>><a class="button"  href="Equations/Résoudre une équation (de type ax+b=c).html">Equations/Résoudre une équation (de type ax+b=c)</a></li>
-    <li>><a class="button"  href="Equations/Résoudre une équation (de type ax+b=cx+d).html">Equations/Résoudre une équation (de type ax+b=cx+d)</a></li>
-    <li>><a class="button"  href="Equations/Résoudre une équation produit/html">Résoudre une équation produit</a></li>
+    <li><a class="button"  href="Equations/Résoudre une équation (de type ax+b=c).html">Equations/Résoudre une équation (de type ax+b=c)</a></li>
+    <li><a class="button"  href="Equations/Résoudre une équation (de type ax+b=cx+d).html">Equations/Résoudre une équation (de type ax+b=cx+d)</a></li>
+    <li><a class="button"  href="Equations/Résoudre une équation produit/html">Résoudre une équation produit</a></li>
     <div style="height: 50px;"></div>
     <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
     </body>
