update transfromations du plan

--- a/3e/Transformations du plan.html
+++ b/3e/Transformations du plan.html
@@ -11,7 +11,7 @@
         Tranformations du plan
     </h1></b></u>
     <ul>Sélectionner la compétences à travailler</ul>
-    <li>Identifier les tranformations du plan</li>
+    <li><a class="button" href="Transformations du plan/Identifier les tranformations du plan.html">Identifier les tranformations du plan</a></li>
     <li>Comprendre les symétries</li>
     <li>Comprendre les translations</li>
     <li>Comprendre les rotations</li>
